--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "webpack-defaults": "webpack-defaults",
     "start": "npm run build -- -w",
-    "build": "echo 'testinggg' && cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
     "clean": "del-cli dist",
     "lint": "eslint --cache src test",
     "prepublish": "npm run build",
